<resources>
    <integer name="com_vk_sdk_AppId">5112321</integer>

    <string name="app_name">VK Alarm</string>

    <string name="alarm">Alarm</string>
    <string name="alarm_create">Create Alarm</string>
    <string name="alarm_update">Update Alarm</string>
    <string name="alarm_empty">You\'re all done!</string>

    <string name="github">Github</string>
    <string name="logout">Logout</string>
    <string name="help">Help &amp; Feedback</string>
    <string name="attributions">Attributions</string>
    <string name="preferences">Preferences</string>

    <string name="delete">Delete</string>
    <string name="done">Done</string>

    <string name="transition_name_alarm_name">transition_name_alarm_name</string>

    <string name="repeat_once">Once</string>
    <string name="repeat_mo">Mo</string>
    <string name="repeat_tu">Tu</string>
    <string name="repeat_we">We</string>
    <string name="repeat_th">Th</string>
    <string name="repeat_fr">Fr</string>
    <string name="repeat_sa">Sa</string>
    <string name="repeat_su">Su</string>

    <string name="disable_complexity_easy">Easy</string>
    <string name="disable_complexity_medium">Medium</string>
    <string name="disable_complexity_hard">Hard</string>

    <string name="icon_enabled">a</string>

    <string name="alarm_edit_random">Random song</string>
    <string name="alarm_edit_label">Label</string>
    <string name="alarm_edit_disable_complexity">Disable complexity</string>
    <string name="alarm_edit_repeat">Repeat</string>

    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>

    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_cancel">Cancel</string>

    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete this alarm?</string>

    <string name="songs_select_dialog_loading">Loading your songs...</string>
    <string name="songs_select_dialog_filter_hint">Filter songs...</string>

    <string name="logout_dialog_message">All your alarms will be deleted. Are you sure you want to logout?</string>

    <string name="pref_alert_play_category">Alarm play settings</string>

    <string name="pref_download_category">Song download settings</string>
    <string name="pref_download_connection_title">Download Details</string>
    <string name="pref_download_connection_summary">Specify connection type to download files</string>
    <string name="pref_download_connection_wifi_only">Wifi only</string>
    <string name="pref_download_connection_any">Any connection</string>
    <string name="pref_download_backup_delay_title">Download backup delay</string>
    <string name="pref_download_backup_delay_summary">Wait max seconds to play backup sound</string>
    <string name="pref_max_song_duration_title">Max song duration</string>
    <string name="pref_max_song_duration_summary">Limit song duration to specified seconds</string>
</resources>
