<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        android:title="@string/alarm_create"/>

    <item
        android:id="@+id/action_github"
        android:title="@string/github"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_attributions"
        android:title="@string/attributions"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_preferences"
        android:title="@string/preferences"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>
